--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
   ],
 
   "background": {
-    "scripts": ["sec01-01.js", "sec01-02.js", "sec01-03.js"]
+    "scripts": ["sec01-01.js", "sec01-02.js", "sec01-03.js", "sec01-04.js", "sec01-05.js", "sec01-06.js"]
   },
 
   "applications": {
