--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
   ],
 
   "background": {
-    "scripts": ["sec01-01.js", "sec01-02.js", "sec01-03.js", "sec01-04.js", "sec01-05.js", "sec01-06.js", "sec01-07.js", "sec01-08.js", "sec01-09.js", "sec01-10.js", "sec01-11.js", "sec01-12.js", "sec01-13.js", "sec01-14.js", "sec01-15.js", "sec01-16.js", "sec01-17.js", "sec01-18.js", "sec01-19.js", "sec01-20.js", "sec01-21.js", "sec01-22.js",
+    "scripts": ["t01/t01-01.js", "t01/t01-02.js", "t01/t01-03.js", "t01/t01-04.js", "t01/t01-05.js", "t01/t01-06.js", "t01/t01-07.js", "t01/t01-08.js", "t01/t01-09.js", "t01/t01-10.js", "t01/t01-11.js", "t01/t01-12.js", "t01/t01-13.js", "t01/t01-14.js", "t01/t01-15.js", "t01/t01-16.js", "t01/t01-17.js", "t01/t01-18.js", "t01/t01-19.js", "t01/t01-20.js", "t01/t01-21.js", "t01/t01-22.js",
       "t02/t02-01.js", "t02/t02-02.js", "t02/t02-03.js", "t02/t02-04.js", "t02/t02-05.js", "t02/t02-06.js", "t02/t02-07.js",
       "t03/t03-01.js", "t03/t03-02.js", "t03/t03-03.js", "t03/t03-04.js", "t03/t03-05.js", "t03/t03-06.js", "t03/t03-07.js", "t03/t03-08.js", "t03/t03-09.js", "t03/t03-10.js", "t03/t03-11.js", "t03/t03-12.js", "t03/t03-13.js", "t03/t03-14.js",
       "t04/t04-01.js", "t04/t04-02.js", "t04/t04-03.js", "t04/t04-04.js", "t04/t04-05.js", "t04/t04-06.js", "t04/t04-07.js",
